--- a/workspace/final_project/attn_masked.ipynb
+++ b/workspace/final_project/attn_masked.ipynb
@@ -19,9 +19,9 @@
    "source": [
     "matrix_size = 4096\n",
     "config = dict(\n",
-    "    matrix_size_M_dim=int(matrix_size / 2),\n",
-    "    matrix_size_K_dim=int(matrix_size / 2),\n",
-    "    matrix_size_N_dim=int(matrix_size / 2),\n",
+    "    matrix_size_M_dim=matrix_size // 2,\n",
+    "    matrix_size_K_dim=matrix_size // 2,\n",
+    "    matrix_size_N_dim=matrix_size // 2,\n",
     "    \n",
     "    DRAM_factor_M=2048,\n",
     "    DRAM_factor_N=2048,\n",
