working if you remove the glb

--- a/workspace/final_project/main.ipynb
+++ b/workspace/final_project/main.ipynb
@@ -20,7 +20,8 @@
     "Changes made:\n",
     "1. Switched MAC from being Imac to Fmac becuase of error message about \"cannot find energy estimator\"\n",
     "2. Created 1 glb instead of 2, one for psum (expected depth: 1920) and one iacts (expected depth: 1536).\n",
-    "3. Chnaged the spatial architecture for the PE cluster from 3x4 to 4x4"
+    "4. Changed the spatial architecture for the PE cluster from 3x4 to 4x4\n",
+    "5. Changed metadata depth and width for the iact_spad and weight_spad to be equal to toe datawidth and depth. "
    ]
   },
   {
