slight change to file name

--- a/workspace/final_project/mapping_search.ipynb
+++ b/workspace/final_project/mapping_search.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 319,
    "id": "42811cd4-867c-4534-a46a-efe2ee32b649",
    "metadata": {
     "scrolled": true
@@ -296,7 +296,7 @@
      "output_type": "stream",
      "text": [
       "minimizing: ['total_energy_uJ', 'utilization_percent', 'computes_per_cycle', 'memory_traffic'], num_of_random_samples: 2\n",
-      "[INFO] 2025-05-02 17:19:05,069 - pytimeloop.accelergy_interface - Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
+      "[INFO] 2025-05-02 17:30:33,953 - pytimeloop.accelergy_interface - Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
      ]
     },
     {
@@ -310,7 +310,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] 2025-05-02 17:19:15,848 - pytimeloop.accelergy_interface - Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
+      "[INFO] 2025-05-02 17:30:44,695 - pytimeloop.accelergy_interface - Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
      ]
     },
     {
@@ -324,7 +324,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] 2025-05-02 17:19:26,295 - pytimeloop.accelergy_interface - Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
+      "[INFO] 2025-05-02 17:30:54,921 - pytimeloop.accelergy_interface - Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
      ]
     },
     {
@@ -338,7 +338,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] 2025-05-02 17:19:37,319 - pytimeloop.accelergy_interface - Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
+      "[INFO] 2025-05-02 17:31:05,214 - pytimeloop.accelergy_interface - Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
      ]
     },
     {
@@ -352,7 +352,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] 2025-05-02 17:19:48,048 - pytimeloop.accelergy_interface - Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
+      "[INFO] 2025-05-02 17:31:16,019 - pytimeloop.accelergy_interface - Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
      ]
     },
     {
@@ -366,7 +366,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] 2025-05-02 17:19:58,540 - pytimeloop.accelergy_interface - Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
+      "[INFO] 2025-05-02 17:31:26,367 - pytimeloop.accelergy_interface - Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
      ]
     },
     {
@@ -374,14 +374,6 @@
      "output_type": "stream",
      "text": [
       "INFO:pytimeloop.accelergy_interface:Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "min_config:  {'total_energy_uJ': {'matrix_size_M_dim': 2048, 'matrix_size_K_dim': 2048, 'matrix_size_N_dim': 2048, 'DRAM_factor_M': 256, 'DRAM_factor_N': 512, 'DRAM_factor_K': 2048, 'DRAM_permutation': ['N', 'M', 'K'], 'ClusterArray_factor_M': 1, 'ClusterArray_factor_N': 1, 'ClusterArray_factor_K': 1, 'ClusterArray_permutation': ['K', 'M', 'N'], 'PE_Cluster_factor_M': 1, 'PE_Cluster_factor_N': 1, 'PE_Cluster_factor_K': 1, 'PE_Cluster_permutation': ['N', 'M', 'K'], 'iact_spad_factor_M': 8, 'iact_spad_factor_N': 1, 'iact_spad_factor_K': 1, 'iact_spad_permutation': ['N', 'M', 'K'], 'weight_spad_factor_M': 1, 'weight_spad_factor_N': 4, 'weight_spad_factor_K': 1, 'weight_spad_permutation': ['K', 'M', 'N'], 'psum_factor_M': 1, 'psum_factor_N': 1, 'psum_factor_K': 1, 'psum_permutation': ['M', 'K', 'N'], 'reg_factor_M': 1, 'reg_factor_N': 1, 'reg_factor_K': 1, 'reg_permutation': ['K', 'M', 'N'], 'density_weights': 1, 'density_inputs': 1}, 'utilization_percent': {'matrix_size_M_dim': 2048, 'matrix_size_K_dim': 2048, 'matrix_size_N_dim': 2048, 'DRAM_factor_M': 1024, 'DRAM_factor_N': 128, 'DRAM_factor_K': 2048, 'DRAM_permutation': ['N', 'K', 'M'], 'ClusterArray_factor_M': 1, 'ClusterArray_factor_N': 1, 'ClusterArray_factor_K': 1, 'ClusterArray_permutation': ['K', 'N', 'M'], 'PE_Cluster_factor_M': 1, 'PE_Cluster_factor_N': 1, 'PE_Cluster_factor_K': 1, 'PE_Cluster_permutation': ['M', 'N', 'K'], 'iact_spad_factor_M': 1, 'iact_spad_factor_N': 1, 'iact_spad_factor_K': 1, 'iact_spad_permutation': ['K', 'M', 'N'], 'weight_spad_factor_M': 1, 'weight_spad_factor_N': 16, 'weight_spad_factor_K': 1, 'weight_spad_permutation': ['K', 'N', 'M'], 'psum_factor_M': 2, 'psum_factor_N': 1, 'psum_factor_K': 1, 'psum_permutation': ['K', 'N', 'M'], 'reg_factor_M': 1, 'reg_factor_N': 1, 'reg_factor_K': 1, 'reg_permutation': ['M', 'K', 'N'], 'density_weights': 1, 'density_inputs': 1}, 'computes_per_cycle': {'matrix_size_M_dim': 2048, 'matrix_size_K_dim': 2048, 'matrix_size_N_dim': 2048, 'DRAM_factor_M': 1024, 'DRAM_factor_N': 128, 'DRAM_factor_K': 2048, 'DRAM_permutation': ['N', 'K', 'M'], 'ClusterArray_factor_M': 1, 'ClusterArray_factor_N': 1, 'ClusterArray_factor_K': 1, 'ClusterArray_permutation': ['K', 'N', 'M'], 'PE_Cluster_factor_M': 1, 'PE_Cluster_factor_N': 1, 'PE_Cluster_factor_K': 1, 'PE_Cluster_permutation': ['M', 'N', 'K'], 'iact_spad_factor_M': 1, 'iact_spad_factor_N': 1, 'iact_spad_factor_K': 1, 'iact_spad_permutation': ['K', 'M', 'N'], 'weight_spad_factor_M': 1, 'weight_spad_factor_N': 16, 'weight_spad_factor_K': 1, 'weight_spad_permutation': ['K', 'N', 'M'], 'psum_factor_M': 2, 'psum_factor_N': 1, 'psum_factor_K': 1, 'psum_permutation': ['K', 'N', 'M'], 'reg_factor_M': 1, 'reg_factor_N': 1, 'reg_factor_K': 1, 'reg_permutation': ['M', 'K', 'N'], 'density_weights': 1, 'density_inputs': 1}, 'memory_traffic': {'matrix_size_M_dim': 2048, 'matrix_size_K_dim': 2048, 'matrix_size_N_dim': 2048, 'DRAM_factor_M': 256, 'DRAM_factor_N': 512, 'DRAM_factor_K': 2048, 'DRAM_permutation': ['N', 'M', 'K'], 'ClusterArray_factor_M': 1, 'ClusterArray_factor_N': 1, 'ClusterArray_factor_K': 1, 'ClusterArray_permutation': ['K', 'M', 'N'], 'PE_Cluster_factor_M': 1, 'PE_Cluster_factor_N': 1, 'PE_Cluster_factor_K': 1, 'PE_Cluster_permutation': ['N', 'M', 'K'], 'iact_spad_factor_M': 8, 'iact_spad_factor_N': 1, 'iact_spad_factor_K': 1, 'iact_spad_permutation': ['N', 'M', 'K'], 'weight_spad_factor_M': 1, 'weight_spad_factor_N': 4, 'weight_spad_factor_K': 1, 'weight_spad_permutation': ['K', 'M', 'N'], 'psum_factor_M': 1, 'psum_factor_N': 1, 'psum_factor_K': 1, 'psum_permutation': ['M', 'K', 'N'], 'reg_factor_M': 1, 'reg_factor_N': 1, 'reg_factor_K': 1, 'reg_permutation': ['K', 'M', 'N'], 'density_weights': 1, 'density_inputs': 1}}\n",
-      "curr_min:  {'total_energy_uJ': 4973944.9, 'utilization_percent': 0.39, 'computes_per_cycle': 1.0, 'memory_traffic': 242672631545}\n"
      ]
     }
    ],
@@ -395,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 320,
    "id": "379f5dc0-e213-4593-aa5a-3727935245f6",
    "metadata": {},
    "outputs": [],
@@ -404,9 +396,9 @@
     "name = \"Jane Doe\" #Change\n",
     "os.makedirs(f\"{folder}\", exist_ok=True)\n",
     "\n",
-    "with open(f\"{folder}/min_config_{name}\", \"w\") as f:\n",
+    "with open(f\"{folder}/250_min_config_{name}\", \"w\") as f:\n",
     "    json.dump(min_config, f, indent=2)\n",
-    "with open(f\"{folder}/curr_min_{name}\", \"w\") as f:\n",
+    "with open(f\"{folder}/250_curr_min_{name}\", \"w\") as f:\n",
     "    json.dump(curr_min, f, indent=2)"
    ]
   },
