--- a/workspace/final_project/mapping_search.ipynb
+++ b/workspace/final_project/mapping_search.ipynb
@@ -348,8 +348,10 @@
     "            config = sample_config(dataflow_permutations, factor_permutations)\n",
     "        visited.add(hash_config(config))\n",
     "        # print(\"config: \", config)\n",
-    "\n",
-    "        update_opt_config_and_curr_opt(config, attributes, opt_config, curr_opt)\n",
+    "        try: \n",
+    "            update_opt_config_and_curr_opt(config, attributes, opt_config, curr_opt)\n",
+    "        except: \n",
+    "            continue\n",
     "\n",
     "    return opt_config, curr_opt"
    ]
