--- a/workspace/final_project/mapping_search.ipynb
+++ b/workspace/final_project/mapping_search.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "335265f4-6e46-4548-a0dc-584caec31243",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
     "    \n",
     "    max_ClusterArray_X = max_ClusterArray[0]\n",
     "    max_ClusterArray_Y = max_ClusterArray[1]\n",
-    "    max_PE_Cluster_X = max_PE_Cluster[1]\n",
+    "    max_PE_Cluster_X = max_PE_Cluster[0]\n",
     "    max_PE_Cluster_Y = max_PE_Cluster[1]\n",
     "    \n",
     "    PE_Cluster_dataflow = dataflow_permutation[\"PE_Cluster\"]\n",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "0fda549d-8e7b-4886-84a0-a833b27cb77b",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "e97960b1-6bd4-4141-93ff-3bb871a05d81",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "f68b301d-eac9-48eb-9051-9d9dd651bc46",
    "metadata": {
     "scrolled": true
@@ -358,12 +358,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "42811cd4-867c-4534-a46a-efe2ee32b649",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "optimizing over: ['total_energy_uJ', 'utilization_percent', 'computes_per_cycle', 'memory_traffic'], num_of_random_samples: 1\n",
+      "[INFO] 2025-05-04 20:17:06,713 - pytimeloop.accelergy_interface - Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:pytimeloop.accelergy_interface:Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] 2025-05-04 20:17:17,639 - pytimeloop.accelergy_interface - Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:pytimeloop.accelergy_interface:Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] 2025-05-04 20:17:28,638 - pytimeloop.accelergy_interface - Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:pytimeloop.accelergy_interface:Running Accelergy with command: accelergy /home/workspace/final_project/output_dir/parsed-processed-input.yaml -o ./output_dir/ -v\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================OUTPUT==================\n",
+      "min_config:  {'total_energy_uJ': {'matrix_size_M_dim': 2048, 'matrix_size_K_dim': 2048, 'matrix_size_N_dim': 2048, 'DRAM_factor_M': 512, 'DRAM_factor_N': 128, 'DRAM_factor_K': 16, 'DRAM_permutation': ['M', 'K', 'N'], 'ClusterArray_factor_M': 1, 'ClusterArray_factor_N': 2, 'ClusterArray_factor_K': 8, 'ClusterArray_permutation': ['K', 'N', 'M'], 'PE_Cluster_factor_M': 4, 'PE_Cluster_factor_N': 1, 'PE_Cluster_factor_K': 4, 'PE_Cluster_permutation': ['K', 'M', 'N'], 'iact_spad_factor_M': 1, 'iact_spad_factor_N': 1, 'iact_spad_factor_K': 4, 'iact_spad_permutation': ['M', 'N', 'K'], 'weight_spad_factor_M': 1, 'weight_spad_factor_N': 8, 'weight_spad_factor_K': 1, 'weight_spad_permutation': ['N', 'M', 'K'], 'psum_factor_M': 1, 'psum_factor_N': 1, 'psum_factor_K': 1, 'psum_permutation': ['M', 'K', 'N'], 'reg_factor_M': 1, 'reg_factor_N': 1, 'reg_factor_K': 1, 'reg_permutation': ['N', 'K', 'M'], 'density_weights': 1, 'density_inputs': 1, 'pe_meshX': 4, 'pe_meshY': 4}, 'utilization_percent': {'matrix_size_M_dim': 2048, 'matrix_size_K_dim': 2048, 'matrix_size_N_dim': 2048, 'DRAM_factor_M': 512, 'DRAM_factor_N': 128, 'DRAM_factor_K': 16, 'DRAM_permutation': ['M', 'K', 'N'], 'ClusterArray_factor_M': 1, 'ClusterArray_factor_N': 2, 'ClusterArray_factor_K': 8, 'ClusterArray_permutation': ['K', 'N', 'M'], 'PE_Cluster_factor_M': 4, 'PE_Cluster_factor_N': 1, 'PE_Cluster_factor_K': 4, 'PE_Cluster_permutation': ['K', 'M', 'N'], 'iact_spad_factor_M': 1, 'iact_spad_factor_N': 1, 'iact_spad_factor_K': 4, 'iact_spad_permutation': ['M', 'N', 'K'], 'weight_spad_factor_M': 1, 'weight_spad_factor_N': 8, 'weight_spad_factor_K': 1, 'weight_spad_permutation': ['N', 'M', 'K'], 'psum_factor_M': 1, 'psum_factor_N': 1, 'psum_factor_K': 1, 'psum_permutation': ['M', 'K', 'N'], 'reg_factor_M': 1, 'reg_factor_N': 1, 'reg_factor_K': 1, 'reg_permutation': ['N', 'K', 'M'], 'density_weights': 1, 'density_inputs': 1, 'pe_meshX': 4, 'pe_meshY': 4}, 'computes_per_cycle': {'matrix_size_M_dim': 2048, 'matrix_size_K_dim': 2048, 'matrix_size_N_dim': 2048, 'DRAM_factor_M': 512, 'DRAM_factor_N': 128, 'DRAM_factor_K': 16, 'DRAM_permutation': ['M', 'K', 'N'], 'ClusterArray_factor_M': 1, 'ClusterArray_factor_N': 2, 'ClusterArray_factor_K': 8, 'ClusterArray_permutation': ['K', 'N', 'M'], 'PE_Cluster_factor_M': 4, 'PE_Cluster_factor_N': 1, 'PE_Cluster_factor_K': 4, 'PE_Cluster_permutation': ['K', 'M', 'N'], 'iact_spad_factor_M': 1, 'iact_spad_factor_N': 1, 'iact_spad_factor_K': 4, 'iact_spad_permutation': ['M', 'N', 'K'], 'weight_spad_factor_M': 1, 'weight_spad_factor_N': 8, 'weight_spad_factor_K': 1, 'weight_spad_permutation': ['N', 'M', 'K'], 'psum_factor_M': 1, 'psum_factor_N': 1, 'psum_factor_K': 1, 'psum_permutation': ['M', 'K', 'N'], 'reg_factor_M': 1, 'reg_factor_N': 1, 'reg_factor_K': 1, 'reg_permutation': ['N', 'K', 'M'], 'density_weights': 1, 'density_inputs': 1, 'pe_meshX': 4, 'pe_meshY': 4}, 'memory_traffic': {'matrix_size_M_dim': 2048, 'matrix_size_K_dim': 2048, 'matrix_size_N_dim': 2048, 'DRAM_factor_M': 512, 'DRAM_factor_N': 128, 'DRAM_factor_K': 16, 'DRAM_permutation': ['M', 'K', 'N'], 'ClusterArray_factor_M': 1, 'ClusterArray_factor_N': 2, 'ClusterArray_factor_K': 8, 'ClusterArray_permutation': ['K', 'N', 'M'], 'PE_Cluster_factor_M': 4, 'PE_Cluster_factor_N': 1, 'PE_Cluster_factor_K': 4, 'PE_Cluster_permutation': ['K', 'M', 'N'], 'iact_spad_factor_M': 1, 'iact_spad_factor_N': 1, 'iact_spad_factor_K': 4, 'iact_spad_permutation': ['M', 'N', 'K'], 'weight_spad_factor_M': 1, 'weight_spad_factor_N': 8, 'weight_spad_factor_K': 1, 'weight_spad_permutation': ['N', 'M', 'K'], 'psum_factor_M': 1, 'psum_factor_N': 1, 'psum_factor_K': 1, 'psum_permutation': ['M', 'K', 'N'], 'reg_factor_M': 1, 'reg_factor_N': 1, 'reg_factor_K': 1, 'reg_permutation': ['N', 'K', 'M'], 'density_weights': 1, 'density_inputs': 1, 'pe_meshX': 4, 'pe_meshY': 4}}\n",
+      "curr_min:  {'total_energy_uJ': 1079824.61, 'utilization_percent': 100.0, 'computes_per_cycle': 255.99999784041145, 'memory_traffic': 209381132074}\n"
+     ]
+    }
+   ],
    "source": [
     "num_of_random_samples = 1\n",
     "attributes = ['total_energy_uJ', 'utilization_percent', 'computes_per_cycle', 'memory_traffic']\n",
